<resources>
    <string name="app_name">MA-LAB-7</string>
    <string name="unleash_your_potential">Unleash Your Potential</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="are_you_an_irl_member">Are you an IRL Member?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="would_you_like_to_receive_updates_via_email">Would you like to Receive updates via email?</string>
    <string name="exercises">Exercises</string>
    <string name="choose_a_muscle_group">Choose a muscle group</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="rating">Rating</string>
    <string name="visit_the_developer"><u>Visit the Developer</u></string>
    <string name="loading">Loading...</string>
    <string name="click_the_triple_dot_button_to_choose_from_our_menu">Click the triple dot button to choose from our menu</string>
    <string name="submitted_at">Submitted At</string>
    <string name="submit">Submit</string>
    <string name="feedback_subject">Feedback Subject</string>
    <string name="enter_feedback">Enter Feedback</string>
</resources>